ArduinoLiteParser.py
# Generated from ArduinoLite.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ArduinoLiteParser ( Parser ):

    grammarFileName = "ArduinoLite.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'*'", "'/'", "'+'", "'-'", "'Prenderled'", 
                     "'Apagarled'", "'LeerSensor'", "'MoverServo'", "'Esperar'", 
                     "'si'", "'entonces'", "'TocarBuzzer'", "'EscribirLCD'", 
                     "'EncenderMotor'", "'ApagarMotor'", "'ActivarRele'", 
                     "'DesactivarRele'", "'PrenderRGB'", "'ApagarRGB'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'='", 
                     "'('", "')'", "'{'", "'}'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "PRENDERLED", "APAGARLED", "LEERSENSOR", 
                      "MOVERSERVO", "ESPERAR", "SI", "ENTONCES", "TOCARBUZZER", 
                      "ESCRIBIRLCD", "ENCENDERMOTOR", "APAGARMOTOR", "ACTIVARRELE", 
                      "DESACTIVARRELE", "PRENDERRGB", "APAGARRGB", "EQ", 
                      "NEQ", "LT", "LE", "GT", "GE", "AS", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "COMMA", "SEMICOLON", "ID", "INT", 
                      "STRING", "WS", "COMMENT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_block = 2
    RULE_prenderled = 3
    RULE_apagarled = 4
    RULE_leersensor = 5
    RULE_moverservo = 6
    RULE_esperar = 7
    RULE_asignacion = 8
    RULE_condicion = 9
    RULE_tocarbuzzer = 10
    RULE_escribirlcd = 11
    RULE_encendermotor = 12
    RULE_apagarmotor = 13
    RULE_activarrele = 14
    RULE_desactivarrele = 15
    RULE_prenderrgb = 16
    RULE_apagarrgb = 17
    RULE_expr = 18
    RULE_comparador = 19

    ruleNames =  [ "program", "statement", "block", "prenderled", "apagarled", 
                   "leersensor", "moverservo", "esperar", "asignacion", 
                   "condicion", "tocarbuzzer", "escribirlcd", "encendermotor", 
                   "apagarmotor", "activarrele", "desactivarrele", "prenderrgb", 
                   "apagarrgb", "expr", "comparador" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    PRENDERLED=5
    APAGARLED=6
    LEERSENSOR=7
    MOVERSERVO=8
    ESPERAR=9
    SI=10
    ENTONCES=11
    TOCARBUZZER=12
    ESCRIBIRLCD=13
    ENCENDERMOTOR=14
    APAGARMOTOR=15
    ACTIVARRELE=16
    DESACTIVARRELE=17
    PRENDERRGB=18
    APAGARRGB=19
    EQ=20
    NEQ=21
    LT=22
    LE=23
    GT=24
    GE=25
    AS=26
    LPAREN=27
    RPAREN=28
    LBRACE=29
    RBRACE=30
    COMMA=31
    SEMICOLON=32
    ID=33
    INT=34
    STRING=35
    WS=36
    COMMENT=37
    ERROR_CHAR=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ArduinoLiteParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinoLiteParser.StatementContext)
            else:
                return self.getTypedRuleContext(ArduinoLiteParser.StatementContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(ArduinoLiteParser.SEMICOLON)
            else:
                return self.getToken(ArduinoLiteParser.SEMICOLON, i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinoLiteParser.BlockContext)
            else:
                return self.getTypedRuleContext(ArduinoLiteParser.BlockContext,i)


        def getRuleIndex(self):
            return ArduinoLiteParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ArduinoLiteParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 9127851872) != 0):
                self.state = 44
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [5, 6, 8, 9, 10, 12, 13, 14, 15, 16, 17, 18, 19, 33]:
                    self.state = 40
                    self.statement()
                    self.state = 41
                    self.match(ArduinoLiteParser.SEMICOLON)
                    pass
                elif token in [29]:
                    self.state = 43
                    self.block()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self.match(ArduinoLiteParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prenderled(self):
            return self.getTypedRuleContext(ArduinoLiteParser.PrenderledContext,0)


        def apagarled(self):
            return self.getTypedRuleContext(ArduinoLiteParser.ApagarledContext,0)


        def leersensor(self):
            return self.getTypedRuleContext(ArduinoLiteParser.LeersensorContext,0)


        def moverservo(self):
            return self.getTypedRuleContext(ArduinoLiteParser.MoverservoContext,0)


        def esperar(self):
            return self.getTypedRuleContext(ArduinoLiteParser.EsperarContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(ArduinoLiteParser.AsignacionContext,0)


        def condicion(self):
            return self.getTypedRuleContext(ArduinoLiteParser.CondicionContext,0)


        def tocarbuzzer(self):
            return self.getTypedRuleContext(ArduinoLiteParser.TocarbuzzerContext,0)


        def escribirlcd(self):
            return self.getTypedRuleContext(ArduinoLiteParser.EscribirlcdContext,0)


        def encendermotor(self):
            return self.getTypedRuleContext(ArduinoLiteParser.EncendermotorContext,0)


        def apagarmotor(self):
            return self.getTypedRuleContext(ArduinoLiteParser.ApagarmotorContext,0)


        def activarrele(self):
            return self.getTypedRuleContext(ArduinoLiteParser.ActivarreleContext,0)


        def desactivarrele(self):
            return self.getTypedRuleContext(ArduinoLiteParser.DesactivarreleContext,0)


        def prenderrgb(self):
            return self.getTypedRuleContext(ArduinoLiteParser.PrenderrgbContext,0)


        def apagarrgb(self):
            return self.getTypedRuleContext(ArduinoLiteParser.ApagarrgbContext,0)


        def getRuleIndex(self):
            return ArduinoLiteParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ArduinoLiteParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.prenderled()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.apagarled()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 53
                self.leersensor()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 54
                self.moverservo()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 55
                self.esperar()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 56
                self.asignacion()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 57
                self.condicion()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 58
                self.tocarbuzzer()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 59
                self.escribirlcd()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 60
                self.encendermotor()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 61
                self.apagarmotor()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 62
                self.activarrele()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 63
                self.desactivarrele()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 64
                self.prenderrgb()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 65
                self.apagarrgb()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(ArduinoLiteParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ArduinoLiteParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinoLiteParser.StatementContext)
            else:
                return self.getTypedRuleContext(ArduinoLiteParser.StatementContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(ArduinoLiteParser.SEMICOLON)
            else:
                return self.getToken(ArduinoLiteParser.SEMICOLON, i)

        def getRuleIndex(self):
            return ArduinoLiteParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = ArduinoLiteParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(ArduinoLiteParser.LBRACE)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8590980960) != 0):
                self.state = 69
                self.statement()
                self.state = 70
                self.match(ArduinoLiteParser.SEMICOLON)
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self.match(ArduinoLiteParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrenderledContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRENDERLED(self):
            return self.getToken(ArduinoLiteParser.PRENDERLED, 0)

        def LPAREN(self):
            return self.getToken(ArduinoLiteParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinoLiteParser.ExprContext)
            else:
                return self.getTypedRuleContext(ArduinoLiteParser.ExprContext,i)


        def COMMA(self):
            return self.getToken(ArduinoLiteParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(ArduinoLiteParser.RPAREN, 0)

        def getRuleIndex(self):
            return ArduinoLiteParser.RULE_prenderled

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrenderled" ):
                listener.enterPrenderled(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrenderled" ):
                listener.exitPrenderled(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrenderled" ):
                return visitor.visitPrenderled(self)
            else:
                return visitor.visitChildren(self)




    def prenderled(self):

        localctx = ArduinoLiteParser.PrenderledContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_prenderled)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(ArduinoLiteParser.PRENDERLED)
            self.state = 80
            self.match(ArduinoLiteParser.LPAREN)
            self.state = 81
            self.expr(0)
            self.state = 82
            self.match(ArduinoLiteParser.COMMA)
            self.state = 83
            self.expr(0)
            self.state = 84
            self.match(ArduinoLiteParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ApagarledContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def APAGARLED(self):
            return self.getToken(ArduinoLiteParser.APAGARLED, 0)

        def LPAREN(self):
            return self.getToken(ArduinoLiteParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(ArduinoLiteParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(ArduinoLiteParser.RPAREN, 0)

        def getRuleIndex(self):
            return ArduinoLiteParser.RULE_apagarled

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterApagarled" ):
                listener.enterApagarled(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitApagarled" ):
                listener.exitApagarled(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitApagarled" ):
                return visitor.visitApagarled(self)
            else:
                return visitor.visitChildren(self)




    def apagarled(self):

        localctx = ArduinoLiteParser.ApagarledContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_apagarled)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(ArduinoLiteParser.APAGARLED)
            self.state = 87
            self.match(ArduinoLiteParser.LPAREN)
            self.state = 88
            self.expr(0)
            self.state = 89
            self.match(ArduinoLiteParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LeersensorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ArduinoLiteParser.ID, 0)

        def AS(self):
            return self.getToken(ArduinoLiteParser.AS, 0)

        def LEERSENSOR(self):
            return self.getToken(ArduinoLiteParser.LEERSENSOR, 0)

        def LPAREN(self):
            return self.getToken(ArduinoLiteParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(ArduinoLiteParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(ArduinoLiteParser.RPAREN, 0)

        def getRuleIndex(self):
            return ArduinoLiteParser.RULE_leersensor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeersensor" ):
                listener.enterLeersensor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeersensor" ):
                listener.exitLeersensor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLeersensor" ):
                return visitor.visitLeersensor(self)
            else:
                return visitor.visitChildren(self)




    def leersensor(self):

        localctx = ArduinoLiteParser.LeersensorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_leersensor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(ArduinoLiteParser.ID)
            self.state = 92
            self.match(ArduinoLiteParser.AS)
            self.state = 93
            self.match(ArduinoLiteParser.LEERSENSOR)
            self.state = 94
            self.match(ArduinoLiteParser.LPAREN)
            self.state = 95
            self.expr(0)
            self.state = 96
            self.match(ArduinoLiteParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoverservoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MOVERSERVO(self):
            return self.getToken(ArduinoLiteParser.MOVERSERVO, 0)

        def LPAREN(self):
            return self.getToken(ArduinoLiteParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinoLiteParser.ExprContext)
            else:
                return self.getTypedRuleContext(ArduinoLiteParser.ExprContext,i)


        def COMMA(self):
            return self.getToken(ArduinoLiteParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(ArduinoLiteParser.RPAREN, 0)

        def getRuleIndex(self):
            return ArduinoLiteParser.RULE_moverservo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMoverservo" ):
                listener.enterMoverservo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMoverservo" ):
                listener.exitMoverservo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMoverservo" ):
                return visitor.visitMoverservo(self)
            else:
                return visitor.visitChildren(self)




    def moverservo(self):

        localctx = ArduinoLiteParser.MoverservoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_moverservo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(ArduinoLiteParser.MOVERSERVO)
            self.state = 99
            self.match(ArduinoLiteParser.LPAREN)
            self.state = 100
            self.expr(0)
            self.state = 101
            self.match(ArduinoLiteParser.COMMA)
            self.state = 102
            self.expr(0)
            self.state = 103
            self.match(ArduinoLiteParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EsperarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESPERAR(self):
            return self.getToken(ArduinoLiteParser.ESPERAR, 0)

        def LPAREN(self):
            return self.getToken(ArduinoLiteParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(ArduinoLiteParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(ArduinoLiteParser.RPAREN, 0)

        def getRuleIndex(self):
            return ArduinoLiteParser.RULE_esperar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEsperar" ):
                listener.enterEsperar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEsperar" ):
                listener.exitEsperar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEsperar" ):
                return visitor.visitEsperar(self)
            else:
                return visitor.visitChildren(self)




    def esperar(self):

        localctx = ArduinoLiteParser.EsperarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_esperar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(ArduinoLiteParser.ESPERAR)
            self.state = 106
            self.match(ArduinoLiteParser.LPAREN)
            self.state = 107
            self.expr(0)
            self.state = 108
            self.match(ArduinoLiteParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ArduinoLiteParser.ID, 0)

        def AS(self):
            return self.getToken(ArduinoLiteParser.AS, 0)

        def expr(self):
            return self.getTypedRuleContext(ArduinoLiteParser.ExprContext,0)


        def getRuleIndex(self):
            return ArduinoLiteParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = ArduinoLiteParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(ArduinoLiteParser.ID)
            self.state = 111
            self.match(ArduinoLiteParser.AS)
            self.state = 112
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SI(self):
            return self.getToken(ArduinoLiteParser.SI, 0)

        def LPAREN(self):
            return self.getToken(ArduinoLiteParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinoLiteParser.ExprContext)
            else:
                return self.getTypedRuleContext(ArduinoLiteParser.ExprContext,i)


        def comparador(self):
            return self.getTypedRuleContext(ArduinoLiteParser.ComparadorContext,0)


        def RPAREN(self):
            return self.getToken(ArduinoLiteParser.RPAREN, 0)

        def ENTONCES(self):
            return self.getToken(ArduinoLiteParser.ENTONCES, 0)

        def block(self):
            return self.getTypedRuleContext(ArduinoLiteParser.BlockContext,0)


        def getRuleIndex(self):
            return ArduinoLiteParser.RULE_condicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicion" ):
                listener.enterCondicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicion" ):
                listener.exitCondicion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicion" ):
                return visitor.visitCondicion(self)
            else:
                return visitor.visitChildren(self)




    def condicion(self):

        localctx = ArduinoLiteParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condicion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(ArduinoLiteParser.SI)
            self.state = 115
            self.match(ArduinoLiteParser.LPAREN)
            self.state = 116
            self.expr(0)
            self.state = 117
            self.comparador()
            self.state = 118
            self.expr(0)
            self.state = 119
            self.match(ArduinoLiteParser.RPAREN)
            self.state = 120
            self.match(ArduinoLiteParser.ENTONCES)
            self.state = 121
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TocarbuzzerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOCARBUZZER(self):
            return self.getToken(ArduinoLiteParser.TOCARBUZZER, 0)

        def LPAREN(self):
            return self.getToken(ArduinoLiteParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinoLiteParser.ExprContext)
            else:
                return self.getTypedRuleContext(ArduinoLiteParser.ExprContext,i)


        def COMMA(self):
            return self.getToken(ArduinoLiteParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(ArduinoLiteParser.RPAREN, 0)

        def getRuleIndex(self):
            return ArduinoLiteParser.RULE_tocarbuzzer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTocarbuzzer" ):
                listener.enterTocarbuzzer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTocarbuzzer" ):
                listener.exitTocarbuzzer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTocarbuzzer" ):
                return visitor.visitTocarbuzzer(self)
            else:
                return visitor.visitChildren(self)




    def tocarbuzzer(self):

        localctx = ArduinoLiteParser.TocarbuzzerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_tocarbuzzer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(ArduinoLiteParser.TOCARBUZZER)
            self.state = 124
            self.match(ArduinoLiteParser.LPAREN)
            self.state = 125
            self.expr(0)
            self.state = 126
            self.match(ArduinoLiteParser.COMMA)
            self.state = 127
            self.expr(0)
            self.state = 128
            self.match(ArduinoLiteParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EscribirlcdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESCRIBIRLCD(self):
            return self.getToken(ArduinoLiteParser.ESCRIBIRLCD, 0)

        def LPAREN(self):
            return self.getToken(ArduinoLiteParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduinoLiteParser.ExprContext)
            else:
                return self.getTypedRuleContext(ArduinoLiteParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ArduinoLiteParser.COMMA)
            else:
                return self.getToken(ArduinoLiteParser.COMMA, i)

        def STRING(self):
